tests/fail/drop_memcase_and_get.stderr
error[E0505]: cannot move out of `mem_case` because it is borrowed
  --> tests/fail/drop_memcase_and_get.rs:36:10
   |
34 |     let mem_case = MemCase::<VecString>::encase(vec);
   |         -------- binding `mem_case` declared here
35 |     let s = mem_case.get(0);
   |             -------- borrow of `mem_case` occurs here
36 |     drop(mem_case);
   |          ^^^^^^^^ move out of `mem_case` occurs here
37 |     assert_eq!(s, "foo");
   |     -------------------- borrow later used here
